--- a/src/main/kotlin/report_rendering/krangl_example_report.Rmd
+++ b/src/main/kotlin/report_rendering/krangl_example_report.Rmd
@@ -1,5 +1,5 @@
 ## Flowers Analysis
-The iris flower:
+The iris flower
 ![](https://goo.gl/tTbZMq)
 
 ```{r }
@@ -9,7 +9,7 @@ The iris flower:
 import krangl.*
 ```
 
-The first records ininput data which is bundled with krangl is
+The first records in the input data (which is bundled with krangl) are
 
 ```{r }
 irisData
@@ -21,14 +21,18 @@ The structure of the input data is
 irisData.glimpse()
 ```
 
-Calculate mean petal width
+Calculate mean petal
 
 ```{r }
 val summarizeDf: DataFrame = irisData
     .groupBy("Species")
     .summarize("mean_petal_width") { it["Petal.Width"].mean() }
+```
 
+Print the summarized data
+
+```{r }
 summarizeDf.print()
 ```
 
-conclusion: Iris flowers of species _virginica_ have on average largest petal width.
+Conclusion: Iris flowers of species _virginica_ have on average the largest petal width.
